--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,8 @@
 {
 	"name": "Existing Dockerfile",
 
-	// Sets the run context to one level up instead of the .devcontainer folder.
-	"context": "..",
+	// Sets the run context to the level of the .devcontainer folder.
+	"context": ".",
 
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 	 "dockerFile": "./Dockerfile",
